src/test/deca/context/valid/avecObjet/call_method_one_param_float.deca
// Description :
//    Appel d'une méthode avec un paramètre float.
//
// Resultats :
//    OK

class A {
    void m(float f) {
        println(f);
    }
}

{
    A a = new A();
    a.m(1.5);
}

