src/test/deca/context/invalid/avecObjet/call_method_on_string.deca
// Description :
//    Appel de méthode sur une expression de type string.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

{
    string s = "abc";
    s.f();
}

